fixed settings update message, overflows, sidebar history items overflows, auto page reload

--- a/src/styles/activechat.scss
+++ b/src/styles/activechat.scss
@@ -91,7 +91,7 @@
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
-    height: 10%;
+    height: 8%;
     display: flex;
     align-items: center;
     justify-content: center;
